fix(ERAS-207): added fix for sidebar menu overlaping and scroll on ipad width

--- a/src/app/shared/components/layout/layout.component.scss
+++ b/src/app/shared/components/layout/layout.component.scss
@@ -11,43 +11,49 @@
 }
 // Responsive margin for container
 @media (max-width: 1200px) {
-  .container .app-title {
+  .container,
+  .app-title {
     margin: 0 4%;
   }
 }
 @media (max-width: 800px) {
-  .container .app-title{
+  .container,
+  .app-title {
     margin: 0 1%;
     max-width: 100%;
     padding: ut.get-size(padding, xs);
   }
 }
 @media (max-width: 600px) {
-  .container .app-title{
+  .container,
+  .app-title {
     margin: 0;
     padding: ut.get-size(padding, xs);
   }
 }
 
-mat-sidenav-container{
+mat-sidenav-container {
   height: 100%;
 }
-mat-sidenav{
+mat-sidenav {
   background-color: ut.get-color('primary', 25); //neutral 30
   color: ut.get-color('neutral', 70);
   width: 70px;
   height: 110%;
   border-radius: 0%;
-  transition: width 0.5s cubic-bezier(0.4, 0, 0.2, 1);
   transform-origin: left;
+}
+mat-sidenav,
+mat-sidenav-content {
+  transition: all 500ms ease-in-out !important;
 }
 mat-sidenav.sidenav-expanded {
   width: 250px;
 }
-.sidenav-expanded .menu-label{
-    color: ut.get-color('neutral', 70);
+.sidenav-expanded .menu-label {
+  color: ut.get-color('neutral', 70);
 }
-.mat-drawer-inner-container{
+.mat-drawer-inner-container {
   display: block;
   position: fixed;
   justify-content: center;
@@ -61,12 +67,12 @@ mat-sidenav-content::-webkit-scrollbar,
 .mat-drawer-inner-container::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
 }
-.app-title{
+.app-title {
   font-size: 1.5rem;
   font-weight: 600;
   color: ut.get-color('primary', 30);
 }
-mat-toolbar{
+mat-toolbar {
   display: flex;
   justify-content: space-between;
   height: 50px;
@@ -79,17 +85,18 @@ button {
   padding: 0;
   margin: 0;
   cursor: pointer;
-  width: 300px;
+  width: 100%;
   height: 50px;
   color: ut.get-color('neutral', 70);
 }
-.menu-button.active, .menu-button:hover{
+.menu-button.active,
+.menu-button:hover {
   color: ut.get-color('neutral', 100);
   background: ut.get-color('primary', 70);
   transition:
     color 0.2s,
     background 0.2s;
-  .menu-label{
+  .menu-label {
     color: ut.get-color('neutral', 100);
   }
 }
@@ -101,15 +108,25 @@ button {
   margin: 0;
   vertical-align: middle;
 }
-.expand-button{
-  width: 150px;
+.expand-button {
+  width: auto;
   color: ut.get-color('neutral', 50);
   height: 50px;
 }
-.menu-label{
+.menu-label {
   position: absolute;
   left: 75px;
   font-size: ut.get-font-size(title, medium);
   font-weight: 500;
   white-space: nowrap;
+}
+span.hide-title {
+  display: none;
+  opacity: 0;
+  transition-property: display opacity;
+  transition-duration: 400ms;
+  transition-behavior: allow-discrete;
+}
+.material-icons-outlined {
+  font-family: 'Material Icons Outlined' !important;
 }
